contrast fixes

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -142,7 +142,7 @@
 
   &__copyright {
     font-size: 0.875rem;
-    color: rgba(255, 255, 255, 0.6);
+    color: white;
     margin: 0;
   }
 
@@ -154,16 +154,13 @@
   }
 
   &__legal-link {
-    color: rgba(255, 255, 255, 0.6);
+    color: white;
     text-decoration: none;
     transition: color 0.3s ease;
 
-    &:hover {
-      color: white;
-    }
   }
 
   &__separator {
-    color: rgba(255, 255, 255, 0.3);
+    color: white;
   }
 }
