--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -518,7 +518,6 @@
     font-size: 2rem;
     font-weight: 800;
     color: $primary-color;
-    opacity: 0.3;
     margin: 0 0 0.5rem;
   }
 
@@ -624,7 +623,7 @@
       }
 
       .faq__question {
-        color: #0891b2;
+        color: $primary-color;
         border-bottom: 1px solid #e5e7eb;
       }
     }
@@ -652,7 +651,7 @@
     }
 
     &:hover {
-      color: #0891b2;
+      color: $primary-color;
     }
 
     @media (min-width: $breakpoint-md) {
@@ -697,7 +696,7 @@
   &__link {
     display: inline-flex;
     align-items: center;
-    color: #0891b2;
+    color: $primary-color;
     font-size: 1.125rem;
     font-weight: 600;
     text-decoration: none;
@@ -705,7 +704,7 @@
     margin-top: 1rem;
 
     &:hover {
-      color: #0e7490;
+      color: black;
       transform: translateX(4px);
     }
 
